Kong-Api-Gateway-Research/Kong-Solution-2/apps/3-grc/1-kong-api-gateway-grc.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grc-kong-api-gateway
  namespace: grc-kic
spec:
  gatewayClassName: grc-kong-gatewayclass
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: grc-ns
